matrix: add project homeserver
Open registration with email verification (self-hosted)

--- a/website/static/index.html
+++ b/website/static/index.html
@@ -145,6 +145,9 @@
         s3cqv57f3vvyrgwm7v3avkvkft5xesy27goaexkql6a55yevyi5bc3qd.onion:50001:t
       </code>
     </ul>
+    <h4>Matrix Homeserver</h4>
+
+    <a href="https://element.nixbitcoin.org">@nixbitcoin.org homeserver</a> - matrix-synapse homeserver with open registration (email required).
 
     <h4>JoinMarket Orderbook</h4>
 
