--- a/website/static/devkeys.html
+++ b/website/static/devkeys.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html charset="utf-8"><head>
-<meta http-equiv="content-type" content="text/html; charset=windows-1252">
+<html><head>
+    <meta charset="utf-8">
     <title>nix-bitcoin</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
