responsive site redesign
Received by E-Mail from @artdesignbySF

--- a/website/static/devkeys.html
+++ b/website/static/devkeys.html
@@ -1,67 +1,30 @@
 <!DOCTYPE html>
-<html><head>
-    <meta charset="utf-8">
+<html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+
     <title>nix-bitcoin</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <style>
-      h1,h2,h3 { line-height: 1.0 }
 
-      ul.socials {
-        margin: 0;
-        padding: 0;
-        list-style-type: none;
-        overflow: hidden;
-      }
-      ul.socials > li {
-        float: left;
-        display: block;
-        padding-right: 0.8rem;
-      }
-      ul.socials img {
-        color: #ff0000;
-        width: 20px;
-      }
-      body {
-        color: #444;
-        padding: 10px 10px;
-        margin: 20px auto;
-        font-size: 1.0rem;
-        max-width: 800px;
-        font-family: sans;
-      }
-      .datatable {
-        font-family: monospace;
-        line-height: 1.15rem;
-        font-size: 1.2rem;
-      }
-      .datatable th {
-        font-family: sans;
-        font-size: 0.8rem;
-        text-align: left;
-        font-weight: bold;
-        padding-right: 10px;
-      }
-      code {
-        background-color: #eee;
-        border: 1px solid #999;
-        max-width: 800px;
-        display: block;
-        padding: 20px;
-        word-wrap: break-word;
-        font-size: 0.8rem;
-      }
-    </style>
-  </head>
-  <body>
-    <h1>nix-bitcoin
-      <img
-        align=right
-        width="100"
-        src="files/nix-bitcoin-logo.png"
-        alt="nix-bitcoin logo">
-    </h1>
+    <link rel="stylesheet" type="text/css" href="nix-bitcoin.css" media="screen" />
+</head>
 
-    <h3>Developer Keys</h3
+<body>
+
+<header>
+<brand>
+<h1>NIX-BITCOIN</h1>
+</brand>
+<img id="logo"src="files/nix-bitcoin-logo.png" alt="nix-bitcoin logo">
+</header>
+
+    <ul class="socials">
+
+      <li><a href="https://github.com/fort-nix/nix-bitcoin"><img class="socialicon" src="files/github.svg" title="github: nix-bitcoin"></a></li>
+      <li><a href="https://twitter.com/nixbitcoinorg"><img class="socialicon" src="files/twitter.svg" title="twitter: @nixbitcoinorg"></a></li>
+      <li><a href="/btcpayserver/apps/4D1Dxb5cGnXHRgNRBpoaraZKTX3i/pos"><img class="socialicon" src="files/bitcoin.svg" title="BTCPayServer"></a></li>
+      <li><a href="/devkeys.html"><img class="socialicon" src="files/key.svg" title="Developer Keys"></a></li>
+    </ul>
+
+    <h3>Developer Keys</h3>
 
     All nix-bitcoin developers PGP sign their commits. Their PGP keys can be found here.
 
@@ -70,5 +33,7 @@
     <li><a href="/files/jonasnick.asc">Jonas Nick</a>: 36C7 1A37 C9D9 88BD E825  08D9 B1A7 0E4F 8DCD 0366</li>
     <li><a href="/files/nixbitcoindev.asc">nixbitcoindev</a>: 577A 3452 7F3E 2A85 E80F  E164 DD11 F9AD 5308 B3BA</li>
     </ul>
-  </body>
-</html>
+
+<footer>
+</footer>
+</body></html>
