website: update design

--- a/website/static/devkeys.html
+++ b/website/static/devkeys.html
@@ -1,65 +1,16 @@
 <!DOCTYPE html>
-<html><head>
+<html>
+  <head>
     <meta charset="utf-8">
     <title>nix-bitcoin</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <style>
-      h1,h2,h3 { line-height: 1.0 }
-
-      ul.socials {
-        margin: 0;
-        padding: 0;
-        list-style-type: none;
-        overflow: hidden;
-      }
-      ul.socials > li {
-        float: left;
-        display: block;
-        padding-right: 0.8rem;
-      }
-      ul.socials img {
-        color: #ff0000;
-        width: 20px;
-      }
-      body {
-        color: #444;
-        padding: 10px 10px;
-        margin: 20px auto;
-        font-size: 1.0rem;
-        max-width: 800px;
-        font-family: sans;
-      }
-      .datatable {
-        font-family: monospace;
-        line-height: 1.15rem;
-        font-size: 1.2rem;
-      }
-      .datatable th {
-        font-family: sans;
-        font-size: 0.8rem;
-        text-align: left;
-        font-weight: bold;
-        padding-right: 10px;
-      }
-      code {
-        background-color: #eee;
-        border: 1px solid #999;
-        max-width: 800px;
-        display: block;
-        padding: 20px;
-        word-wrap: break-word;
-        font-size: 0.8rem;
-      }
-    </style>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h1>nix-bitcoin
-      <img
-        align=right
-        width="100"
-        src="files/nix-bitcoin-logo.png"
-        alt="nix-bitcoin logo">
-    </h1>
+    <img id="logo"
+         src="files/nix-bitcoin-logo-text.png"
+         alt="nix-bitcoin"
+         style="margin-left: 0;">
 
     <h3>Developer Keys</h3
 
