website: improve content
- Add link to nixbitcoin.org source
- Reformat onion addresses

--- a/website/static/index.html
+++ b/website/static/index.html
@@ -29,18 +29,18 @@
 
     <h1>nix-bitcoin demo node</h1>
 
-    This webpage is hosted inside an nginx namespace on a nix-bitcoin node running bitcoind, clightning, clboss, electrs, btcpayserver, and joinmarket. The node is deployed using btrfs on Hetzner Online.
+    This webpage is hosted on a nix-bitcoin node (<a href="https://github.com/fort-nix/nixbitcoin.org/">source code</a>) running bitcoind, clightning, clboss, electrs, btcpayserver, and joinmarket. The node is deployed using btrfs on Hetzner Online.
 
     <h4>clightning</h4>
     <code>
       Public Key: 029859bb9d3cde023d43b306f688f02bf821f91790a9fa65f7ff5eb9278074eec9
       <br>
-      Tor v3: yd4yhi55hcovg2ep76bngt7nqkmxp6uc2f6rvgxd3bg7fesuy263ukyd.onion:9735
+      Onion v3: yd4yhi55hcovg2ep76bngt7nqkmxp6uc2f6rvgxd3bg7fesuy263ukyd.onion:9735
     </code>
 
     <h4>electrs</h4>
     <code>
-      s3cqv57f3vvyrgwm7v3avkvkft5xesy27goaexkql6a55yevyi5bc3qd.onion:50001:t
+      Onion v3: s3cqv57f3vvyrgwm7v3avkvkft5xesy27goaexkql6a55yevyi5bc3qd.onion:50001
     </code>
 
     <h4>Matrix Homeserver</h4>
