website: add /donate URL shorthand

--- a/website/static/index.html
+++ b/website/static/index.html
@@ -13,7 +13,7 @@
     <div id="socials">
       <a href="https://github.com/fort-nix/nix-bitcoin"><img src="files/github.svg" title="github: nix-bitcoin"></a>
       <a href="https://twitter.com/nixbitcoinorg"><img src="files/twitter.svg" title="twitter: @nixbitcoinorg"></a>
-      <a href="/btcpayserver/apps/4D1Dxb5cGnXHRgNRBpoaraZKTX3i/pos"><img src="files/bitcoin.svg" title="BTCPayServer"></a>
+      <a href="/donate"><img src="files/bitcoin.svg" title="Donate via BTCPayServer"></a>
       <a href="devkeys.html"><img src="files/key.svg" title="Developer Keys"></a>
     </div>
 
@@ -51,6 +51,6 @@
 
     <h1>Donate</h1>
 
-    You can donate to our nix-bitcoin hosted BTCPayServer <a href="/btcpayserver/apps/4D1Dxb5cGnXHRgNRBpoaraZKTX3i/pos">here</a>.
+    You can donate to our nix-bitcoin hosted BTCPayServer <a href="/donate">here</a>.
   </body>
 </html>
