homepage: add `community` section

--- a/website/static/index.html
+++ b/website/static/index.html
@@ -47,7 +47,11 @@
     <a href="https://element.nixbitcoin.org">@nixbitcoin.org homeserver</a> - matrix-synapse homeserver with open registration (email required).
 
     <h4>JoinMarket Orderbook</h4>
-    A self-hosted JoinMarket orderbook can be found <a href="/obwatcher">here</a>.
+    A self-hosted JoinMarket orderbook can be found <a href="/orderbook">here</a>.
+
+    <h1>Community</h1>
+    Join us in our Matrix room at <a href="https://matrix.to/#/#general:nixbitcoin.org">#general:nixbitcoin.org</a>
+    or in our <span class="inline-code">#nix-bitcoin</span> IRC channel on <a href="https://libera.chat">Libera.Chat</a>.
 
     <h1>Donate</h1>
 
