website: add `:t` to electrum server address

--- a/website/static/index.html
+++ b/website/static/index.html
@@ -40,7 +40,7 @@
 
     <h4>electrs</h4>
     <code>
-      Onion v3: s3cqv57f3vvyrgwm7v3avkvkft5xesy27goaexkql6a55yevyi5bc3qd.onion:50001
+      Onion v3: s3cqv57f3vvyrgwm7v3avkvkft5xesy27goaexkql6a55yevyi5bc3qd.onion:50001:t
     </code>
 
     <h4>Matrix Homeserver</h4>
