website/index: add mempool

--- a/website/static/index.html
+++ b/website/static/index.html
@@ -44,7 +44,11 @@
     </code>
 
     <h4>Matrix Homeserver</h4>
-    <a href="https://element.nixbitcoin.org">@nixbitcoin.org homeserver</a> - matrix-synapse homeserver with open registration (email required).
+    <a href="https://element.nixbitcoin.org">@nixbitcoin.org homeserver</a> – matrix-synapse homeserver with open registration (email required).
+
+    <h4>Mempool</h4>
+    <a href=https://mempool.nixbitcoin.org>mempool.nixbitcoin.org</a> – our instance
+    of the <a href=https://github.com/mempool/mempool>mempool</a> Bitcoin explorer.
 
     <h4>JoinMarket Orderbook</h4>
     A self-hosted JoinMarket orderbook can be found <a href="/orderbook">here</a>.
