homepage: add section `Security Fund`

--- a/website/static/index.html
+++ b/website/static/index.html
@@ -57,6 +57,11 @@
     Join us in our Matrix room at <a href="https://matrix.to/#/#general:nixbitcoin.org">#general:nixbitcoin.org</a>
     or in our <span class="inline-code">#nix-bitcoin</span> IRC channel on <a href="https://libera.chat">Libera.Chat</a>.
 
+    <h1>Security fund</h1>
+    The <a href="https://github.com/fort-nix/nix-bitcoin/blob/master/SECURITY.md#nix-bitcoin-security-fund">
+    nix-bitcoin security fund</a> is a 2 of 3 bitcoin multisig address open for donations, used to reward security
+    researchers who discover vulnerabilities in nix-bitcoin or its upstream dependencies.
+
     <h1>Donate</h1>
 
     You can donate to our nix-bitcoin hosted BTCPayServer <a href="/donate">here</a>.
