matrix homeserver: disable public registrations

--- a/website/static/index.html
+++ b/website/static/index.html
@@ -44,7 +44,7 @@
     </code>
 
     <h4>Matrix Homeserver</h4>
-    <a href="https://element.nixbitcoin.org">@nixbitcoin.org homeserver</a> – matrix-synapse homeserver with open registration (email required).
+    <a href="https://element.nixbitcoin.org">@nixbitcoin.org homeserver</a> – matrix-synapse homeserver.
 
     <h4>Mempool</h4>
     <a href=https://mempool.nixbitcoin.org>mempool.nixbitcoin.org</a> – our instance
