website: remove reference to IRC channel
See https://github.com/fort-nix/nix-bitcoin/pull/716

--- a/website/static/index.html
+++ b/website/static/index.html
@@ -54,8 +54,7 @@
     A self-hosted JoinMarket orderbook can be found <a href="/orderbook">here</a>.
 
     <h1>Community</h1>
-    Join us in our Matrix room at <a href="https://matrix.to/#/#general:nixbitcoin.org">#general:nixbitcoin.org</a>
-    or in our <span class="inline-code">#nix-bitcoin</span> IRC channel on <a href="https://libera.chat">Libera.Chat</a>.
+    Join us in our Matrix room at <a href="https://matrix.to/#/#general:nixbitcoin.org">#general:nixbitcoin.org</a>.
 
     <h1>Security fund</h1>
     The <a href="https://github.com/fort-nix/nix-bitcoin/blob/master/SECURITY.md#nix-bitcoin-security-fund">
